--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,6 +47,19 @@
 <div class="content-inner">
 <div id="txtBox_66" objtype="2" style="position:absolute;padding:0px;display:block;" class="wse-txt-con clr-txt-12" data-phone-prominent-size="30"><h4 class="wse-txt-h4"><span class="wse-txt-inner clr-txt-12 lh-13" data-line-height="1.3"><span class="wse-txt-size"><a href="index.html"><span class="clr-txt-75">Any</span><span class="clr-txt-hexF4B805">Company</span></span></a></span></h4></div>
 
+<!-- Kommunicate -->
+<script type="text/javascript">
+    (function(d, m){
+        var kommunicateSettings = 
+            {"appId":"16e6588f433d7fd51e241ae181f681991","popupWidget":true,"automaticChatOpenOnNavigation":true};
+        var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+        s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+        var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+        window.kommunicate = m; m._globals = kommunicateSettings;
+    })(document, window.kommunicate || {});
+/* NOTE : Use web server to view HTML files as real-time update will not work if you directly open the HTML file in the browser. */
+</script>
+  
 <div id="hdr_staticMenu_58" class="stat-nav wse-men wse-men-s4" objtype="38" style="position:absolute;" align="right"><nav class="horizontal" data-menu-spacing="20" data-menu-same-size="1" data-menu-fill-space="0" data-menu-orientation="horizontal" data-menu-force-ztop="1" data-menu-scrollspy="1" data-menu-moretab="1">
 <ul class="">
 <li style="width:91px;"><a data-title="Home" data-id="40469067" data-external="0" class="clr-txt-21 clr-brd-14" href="index.html"><span class="page-title"><span class="page-title-inner">Home</span></span></a></li>
